--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,60 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
+}
+
+.ButtonDeposit {
+  padding: 10px;
+  margin: 10px;
+  background-color: greenyellow;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+.ButtonDeposit:hover {
+  background-color: white;
+}
+
+.ButtonWithdraw:hover {
+  background-color: white;
+}
+
+
+.ButtonBankrupt:hover {
+  background-color: white;
+}
+
+.ButtonWithdraw {
+  padding: 10px;
+  margin: 10px;
+  background-color: blueviolet;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+.ButtonBankrupt {
+  padding: 10px;
+  margin: 10px;
+  background-color: red;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+.NumberContainer {
+  width: 150px;
+  margin-left: auto;
+  margin-right: auto;
+  justify-content: center;
+  border-radius: 5px;
+  background-color: rgba(255, 0, 0, 0.185);
+  box-shadow: 5px 5px rgba(0, 0, 0, 0.959);
+}
+
+
+.Number {
+  padding: 20px;
 }
